package com.xzll.client.protobuf.interactive;

import com.google.protobuf.InvalidProtocolBufferException;
import com.xzll.common.constant.MsgFormatEnum;
import com.xzll.common.util.ProtoConverterUtil;
import com.xzll.grpc.*;
import io.netty.buffer.ByteBuf;
import io.netty.buffer.Unpooled;
import io.netty.channel.*;
import io.netty.handler.codec.http.FullHttpResponse;
import io.netty.handler.codec.http.websocketx.*;
import io.netty.handler.timeout.IdleState;
import io.netty.handler.timeout.IdleStateEvent;
import io.netty.util.CharsetUtil;

import java.time.LocalDateTime;
import java.time.format.DateTimeFormatter;
import java.util.UUID;
import java.util.concurrent.atomic.AtomicInteger;

/**
 * @Author: hzz
 * @Date: 2026-02-05
 * @Description: ç¾¤èŠæµ‹è¯•å®¢æˆ·ç«¯Handler
 */
public class GroupChatClientHandler extends SimpleChannelInboundHandler<Object> {

    private final WebSocketClientHandshaker handshaker;
    private final String userId;
    private ChannelPromise handshakeFuture;

    private final AtomicInteger sentCount = new AtomicInteger(0);
    private final AtomicInteger receivedCount = new AtomicInteger(0);

    private static final DateTimeFormatter TIME_FORMATTER =
        DateTimeFormatter.ofPattern("HH:mm:ss");

    public GroupChatClientHandler(WebSocketClientHandshaker handshaker, String userId) {
        this.handshaker = handshaker;
        this.userId = userId;
    }

    public ChannelFuture handshakeFuture() {
        return handshakeFuture;
    }

    @Override
    public void handlerAdded(ChannelHandlerContext ctx) {
        handshakeFuture = ctx.newPromise();
    }

    @Override
    public void channelActive(ChannelHandlerContext ctx) throws Exception {
        handshaker.handshake(ctx.channel());
        super.channelActive(ctx);
    }

    @Override
    public void channelInactive(ChannelHandlerContext ctx) throws Exception {
        System.out.println("[" + getTime() + "] âŒ è¿æ¥å·²æ–­å¼€");
        super.channelInactive(ctx);
    }

    @Override
    public void userEventTriggered(ChannelHandlerContext ctx, Object evt) throws Exception {
        if (evt instanceof IdleStateEvent) {
            IdleStateEvent event = (IdleStateEvent) evt;
            if (event.state() == IdleState.READER_IDLE) {
                // å‘é€å¿ƒè·³
                System.out.println("[" + getTime() + "] ğŸ’“ å‘é€å¿ƒè·³");
                ctx.writeAndFlush(new PingWebSocketFrame());
            }
        } else {
            super.userEventTriggered(ctx, evt);
        }
    }

    @Override
    protected void channelRead0(ChannelHandlerContext ctx, Object msg) throws Exception {
        Channel ch = ctx.channel();

        // ã€è°ƒè¯•æ—¥å¿—ã€‘æ”¶åˆ°ä»»ä½•æ¶ˆæ¯
        System.out.println("[" + getTime() + "] ğŸ” [DEBUG] channelRead0 æ”¶åˆ°æ¶ˆæ¯ï¼Œç±»å‹: " + msg.getClass().getSimpleName());

        // å¤„ç†æ¡æ‰‹é˜¶æ®µ
        if (!handshaker.isHandshakeComplete()) {
            handshaker.finishHandshake(ch, (FullHttpResponse) msg);
            System.out.println("[" + getTime() + "] WebSocket æ¡æ‰‹å®Œæˆ");
            handshakeFuture.setSuccess();
            return;
        }

        if (msg instanceof FullHttpResponse) {
            FullHttpResponse response = (FullHttpResponse) msg;
            throw new IllegalStateException(
                "Unexpected FullHttpResponse (status=" + response.status() +
                ", content=" + response.content().toString(CharsetUtil.UTF_8) + ')'
            );
        }

        // å¤„ç†WebSocketå¸§
        if (msg instanceof WebSocketFrame) {
            WebSocketFrame frame = (WebSocketFrame) msg;

            // å¤„ç†å…³é—­å¸§
            if (frame instanceof CloseWebSocketFrame) {
                System.out.println("[" + getTime() + "] âŒ æœåŠ¡å™¨å…³é—­è¿æ¥");
                ch.close();
                return;
            }

            // å¤„ç†Pongå¸§
            if (frame instanceof PongWebSocketFrame) {
                System.out.println("[" + getTime() + "] ğŸ’“ æ”¶åˆ°å¿ƒè·³å“åº”");
                return;
            }

            // å¤„ç†äºŒè¿›åˆ¶å¸§
            if (frame instanceof BinaryWebSocketFrame) {
                BinaryWebSocketFrame binaryFrame = (BinaryWebSocketFrame) frame;
                System.out.println("[" + getTime() + "] ğŸ” [DEBUG] æ”¶åˆ°äºŒè¿›åˆ¶å¸§ï¼Œå¼€å§‹å¤„ç†");
                handleBinaryMessage(ctx, binaryFrame);
                return;
            }
        }

        // ã€è°ƒè¯•æ—¥å¿—ã€‘æœªå¤„ç†çš„æ¶ˆæ¯ç±»å‹
        System.out.println("[" + getTime() + "] âš ï¸ [DEBUG] æœªå¤„ç†çš„æ¶ˆæ¯ç±»å‹: " + msg.getClass().getName());
    }

    /**
     * å¤„ç†äºŒè¿›åˆ¶æ¶ˆæ¯ï¼ˆProtobufï¼‰
     */
    private void handleBinaryMessage(ChannelHandlerContext ctx, BinaryWebSocketFrame frame) {
        try {
            ByteBuf content = frame.content();
            byte[] bytes = new byte[content.readableBytes()];
            content.getBytes(content.readerIndex(), bytes);

            System.out.println("[" + getTime() + "] ğŸ” [DEBUG] è§£æProtobufï¼Œå­—èŠ‚é•¿åº¦: " + bytes.length);

            ImProtoResponse protoResponse = ImProtoResponse.parseFrom(bytes);
            MsgType msgType = protoResponse.getType();

            System.out.println("[" + getTime() + "] ğŸ” [DEBUG] è§£ææˆåŠŸï¼Œæ¶ˆæ¯ç±»å‹: " + msgType + " (" + msgType.getNumber() + ")");

            receivedCount.incrementAndGet();

            switch (msgType) {
                case GROUP_MSG_PUSH:
                    System.out.println("[" + getTime() + "] âœ… [DEBUG] è¿›å…¥ GROUP_MSG_PUSH åˆ†æ”¯");
                    printGroupMessage(protoResponse);
                    break;
                case C2C_ACK:
                    System.out.println("[" + getTime() + "] âœ… [DEBUG] è¿›å…¥ C2C_ACK åˆ†æ”¯");
                    printC2CAckMessage(protoResponse);
                    break;
//                case GROUP_SEND_ACK:
//                    System.out.println("[" + getTime() + "] âœ… [DEBUG] è¿›å…¥ GROUP_SEND_ACK åˆ†æ”¯");
//                    printGroupSendAckMessage(protoResponse);
//                    break;
                default:
                    System.out.println("[" + getTime() + "] ğŸ“¦ [DEBUG] æ”¶åˆ°æœªçŸ¥æ¶ˆæ¯ç±»å‹: " + msgType + " (" + msgType.getNumber() + ")");
                    break;
            }

        } catch (InvalidProtocolBufferException e) {
            System.err.println("[" + getTime() + "] âŒ è§£æProtobufæ¶ˆæ¯å¤±è´¥: " + e.getMessage());
            e.printStackTrace();
        }
    }

    /**
     * æ‰“å°ç¾¤èŠæ¶ˆæ¯
     */
    private void printGroupMessage(ImProtoResponse protoResponse) {
        try {
            GroupMsgPush groupMsg = GroupMsgPush.parseFrom(protoResponse.getPayload());

            String msgId = ProtoConverterUtil.longToSnowflakeString(groupMsg.getMsgId());
            String from = ProtoConverterUtil.longToSnowflakeString(groupMsg.getFrom());
            String groupId = ProtoConverterUtil.longToSnowflakeString(groupMsg.getGroupId());

            System.out.println("â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”");
            System.out.println("[" + getTime() + "] ğŸ‘¥ ç¾¤èŠæ¶ˆæ¯");
            System.out.println("â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”");
            System.out.println("æ¶ˆæ¯ID: " + msgId);
            System.out.println("ç¾¤ID: " + groupId);
            System.out.println("ç¾¤å: " + groupMsg.getGroupName());
            System.out.println("å‘é€æ–¹: " + from);
            System.out.println("å‘é€æ–¹æ˜µç§°: " + groupMsg.getFromNickname());
            System.out.println("æ¶ˆæ¯å†…å®¹: " + groupMsg.getContent());
            System.out.println("æ¶ˆæ¯æ ¼å¼: " + groupMsg.getFormat());
            System.out.println("æ¶ˆæ¯æ—¶é—´: " + new java.util.Date(groupMsg.getTime()));
            System.out.println("â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”");

        } catch (Exception e) {
            System.err.println("è§£æç¾¤èŠæ¶ˆæ¯å¤±è´¥: " + e.getMessage());
        }
    }

    /**
     * æ‰“å°C2C ACK
     */
    private void printC2CAckMessage(ImProtoResponse protoResponse) {
        try {
            C2CAckReq ack = C2CAckReq.parseFrom(protoResponse.getPayload());

            String clientMsgId = ProtoConverterUtil.bytesToUuidString(ack.getClientMsgId());
            String msgId = ProtoConverterUtil.longToSnowflakeString(ack.getMsgId());

            System.out.println("â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”");
            System.out.println("[" + getTime() + "] âœ… C2Cæ¶ˆæ¯å·²è¯»ACK");
            System.out.println("â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”");
            System.out.println("ClientMsgId: " + clientMsgId);
            System.out.println("ServerMsgId: " + msgId);
            System.out.println("çŠ¶æ€: " + ack.getStatus());
            System.out.println("â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”");
        } catch (Exception e) {
            System.err.println("è§£æC2C ACKå¤±è´¥: " + e.getMessage());
        }
    }

    /**
     * æ‰“å°ç¾¤èŠå‘é€ACK
     */
//    private void printGroupSendAckMessage(ImProtoResponse protoResponse) {
//        try {
//            GroupSendAck ack = GroupSendAck.parseFrom(protoResponse.getPayload());
//
//            String msgId = ProtoConverterUtil.longToSnowflakeString(ack.getMsgId());
//            String groupId = ProtoConverterUtil.longToSnowflakeString(ack.getGroupId());
//
//            System.out.println("â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”");
//            System.out.println("[" + getTime() + "] âœ… ç¾¤èŠæ¶ˆæ¯å‘é€ACK");
//            System.out.println("â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”");
//            System.out.println("æ¶ˆæ¯ID: " + msgId);
//            System.out.println("ç¾¤ID: " + groupId);
//            System.out.println("çŠ¶æ€: " + ack.getStatus());
//            System.out.println("å¤±è´¥åŸå› : " + (ack.hasFailReason() ? ack.getFailReason() : "æ— "));
//            System.out.println("â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”");
//        } catch (Exception e) {
//            System.err.println("è§£æç¾¤èŠå‘é€ACKå¤±è´¥: " + e.getMessage());
//            e.printStackTrace();
//        }
//    }

    /**
     * å‘é€ç¾¤èŠæ¶ˆæ¯
     */
    public void sendGroupMessage(Long groupId, String content) {
        try {
            Channel ch = handshakeFuture.channel();
            if (ch == null || !ch.isActive()) {
                System.err.println("[" + getTime() + "] âŒ æœªè¿æ¥åˆ°æœåŠ¡å™¨");
                return;
            }

            long sendTime = System.currentTimeMillis();

            // æ„å»ºç¾¤èŠæ¶ˆæ¯
            GroupSendReq groupMsg = GroupSendReq.newBuilder()
                .setMsgId(0L)  // ç•™ç©ºï¼ŒæœåŠ¡ç«¯ä¼šè‡ªåŠ¨ç”Ÿæˆ
                .setFrom(ProtoConverterUtil.snowflakeStringToLong(userId))
                .setGroupId(ProtoConverterUtil.snowflakeStringToLong(String.valueOf(groupId)))
                .setFormat(MsgFormatEnum.TEXT_MSG.getCode())
                .setContent(content)
                .setTime(sendTime)
                .build();

            // æ„å»ºè¯·æ±‚
            ImProtoRequest request = ImProtoRequest.newBuilder()
                .setType(MsgType.GROUP_SEND)
                .setPayload(com.google.protobuf.ByteString.copyFrom(groupMsg.toByteArray()))
                .build();

            // å‘é€
            byte[] bytes = request.toByteArray();
            ByteBuf buf = Unpooled.wrappedBuffer(bytes);
            ch.writeAndFlush(new BinaryWebSocketFrame(buf));

            sentCount.incrementAndGet();

            System.out.println("[" + getTime() + "] ğŸ“¤ å‘é€ç¾¤èŠæ¶ˆæ¯æˆåŠŸ - groupId:" + groupId + ", content:" + content);

        } catch (Exception e) {
            System.err.println("[" + getTime() + "] âŒ å‘é€ç¾¤èŠæ¶ˆæ¯å¤±è´¥: " + e.getMessage());
        }
    }

    /**
     * å¿«é€Ÿå‘é€æµ‹è¯•æ¶ˆæ¯
     */
    public void quickSendGroupMessage(Long groupId) {
        String content = "æµ‹è¯•æ¶ˆæ¯ - " + System.currentTimeMillis();
        sendGroupMessage(groupId, content);
    }

    /**
     * è¿ç»­å‘é€å¤šæ¡æ¶ˆæ¯
     */
    public void multiSendGroupMessage(Long groupId, int count) {
        for (int i = 0; i < count; i++) {
            String content = "æ‰¹é‡æµ‹è¯•æ¶ˆæ¯ #" + (i + 1) + " - " + System.currentTimeMillis();
            sendGroupMessage(groupId, content);

            // é—´éš”100ms
            try {
                Thread.sleep(100);
            } catch (InterruptedException e) {
                Thread.currentThread().interrupt();
                break;
            }
        }

        System.out.println("[" + getTime() + "] ğŸ“¤ æ‰¹é‡å‘é€å®Œæˆ - count:" + count);
    }

    /**
     * è·å–å½“å‰æ—¶é—´å­—ç¬¦ä¸²
     */
    private String getTime() {
        return LocalDateTime.now().format(TIME_FORMATTER);
    }

    /**
     * è·å–å‘é€æ•°é‡
     */
    public int getSentCount() {
        return sentCount.get();
    }

    /**
     * è·å–æ¥æ”¶æ•°é‡
     */
    public int getReceivedCount() {
        return receivedCount.get();
    }

    @Override
    public void exceptionCaught(ChannelHandlerContext ctx, Throwable cause) {
        System.err.println("[" + getTime() + "] âŒ å¼‚å¸¸: " + cause.getMessage());
        cause.printStackTrace();
    }
}
