package com.xzll.stress

import io.gatling.core.Predef._
import io.gatling.http.Predef._
import scala.concurrent.duration._
import io.netty.buffer.Unpooled
import com.xzll.grpc._
import com.google.protobuf.ByteString
import com.xzll.common.util.ProtoConverterUtil
import com.xzll.common.constant.MsgFormatEnum
import java.util.UUID
import java.util.concurrent.atomic.AtomicLong

/**
 * IM WebSocket å‹åŠ›æµ‹è¯•
 * 
 * åŠŸèƒ½ï¼š
 * 1. å»ºç«‹ WebSocket è¿æ¥
 * 2. å‘é€å¿ƒè·³ï¼ˆPing/Pongï¼‰
 * 3. å‘é€å•èŠæ¶ˆæ¯ï¼ˆC2C_SENDï¼‰
 * 4. æ¥æ”¶æœåŠ¡ç«¯æ¨é€ï¼ˆC2C_MSG_PUSHã€ACK ç­‰ï¼‰
 * 
 * ä½¿ç”¨æ–¹æ³•ï¼š
 * mvn gatling:test
 * 
 * è‡ªå®šä¹‰å‚æ•°ï¼š
 * mvn gatling:test \
 *   -DTARGET_HOST=120.46.85.43 \
 *   -DTARGET_PORT=80 \
 *   -DMACHINE_ID=0 \
 *   -DUSERS_PER_MACHINE=10000 \
 *   -DRAMP_UP_TIME=120 \
 *   -DTEST_DURATION=600
 */
class ImWebSocketSimulation extends Simulation {

  // ==================== å‹ç¼©é›ªèŠ±ç®—æ³•å‚æ•°ï¼ˆä¸æœåŠ¡ç«¯ä¿æŒä¸€è‡´ï¼‰ ====================
  // èµ·å§‹æ—¶é—´ï¼š2022-01-01 00:00:00 çš„ç§’æ—¶é—´æˆ³
  val USER_ID_START_TIME = 1640995200L
  // 4ä½æœºå™¨IDï¼Œæœ€å¤š16å°æœºå™¨
  val USER_MACHINE_ID_BITS = 4L
  // 6ä½åºåˆ—å·ï¼Œæ¯ç§’æœ€å¤š64ä¸ªID
  val USER_SEQUENCE_BITS = 6L
  // ä½ç§»è®¡ç®—
  val USER_MACHINE_SHIFT = USER_SEQUENCE_BITS                           // 6
  val USER_TIMESTAMP_SHIFT = USER_SEQUENCE_BITS + USER_MACHINE_ID_BITS  // 10
  val MAX_USER_SEQUENCE = (1L << USER_SEQUENCE_BITS) - 1                // 63
  val MAX_USER_MACHINE_ID = (1L << USER_MACHINE_ID_BITS) - 1            // 15
  
  // ç”¨æˆ·IDç”Ÿæˆçš„åºåˆ—å·è®¡æ•°å™¨
  val userIdSequence = new AtomicLong(0L)
  // =========================================================================

  // ==================== é…ç½®åŒº ====================
  // ä¼˜å…ˆè¯»å– -D ç³»ç»Ÿå±æ€§ï¼Œå…¶æ¬¡è¯»å–ç¯å¢ƒå˜é‡ï¼Œæœ€åä½¿ç”¨é»˜è®¤å€¼
  val targetHost = sys.props.getOrElse("TARGET_HOST", sys.env.getOrElse("TARGET_HOST", "120.46.85.43"))
  val targetPort = sys.props.getOrElse("TARGET_PORT", sys.env.getOrElse("TARGET_PORT", "80"))
  val wsUrl = s"ws://$targetHost:$targetPort/websocket"
  
  // å‹æµ‹å‚æ•°ï¼ˆå¯é€šè¿‡ç¯å¢ƒå˜é‡æˆ– -D å‚æ•°è¦†ç›–ï¼‰
  val machineId = sys.props.getOrElse("MACHINE_ID", sys.env.getOrElse("MACHINE_ID", "0")).toInt
  val usersPerMachine = sys.props.getOrElse("USERS_PER_MACHINE", sys.env.getOrElse("USERS_PER_MACHINE", "10000")).toInt
  val userIdOffset = machineId * usersPerMachine
  
  // å‹æµ‹æœºå™¨çš„ç”¨æˆ·æœºå™¨IDï¼ˆç”¨äºç”Ÿæˆå‹ç¼©é›ªèŠ±IDï¼‰
  val stressMachineId = (machineId % (MAX_USER_MACHINE_ID + 1)).toLong
  
  val rampUpTime = sys.props.getOrElse("RAMP_UP_TIME", sys.env.getOrElse("RAMP_UP_TIME", "120")).toInt.seconds
  val testDuration = sys.props.getOrElse("TEST_DURATION", sys.env.getOrElse("TEST_DURATION", "600")).toInt.seconds
  
  // æ¶ˆæ¯å‘é€é¢‘ç‡é…ç½®ï¼ˆå¯åœ¨å¯åŠ¨æ—¶è®¾ç½®ï¼‰
  val msgIntervalMs = sys.props.getOrElse("MSG_INTERVAL_MS", sys.env.getOrElse("MSG_INTERVAL_MS", "5000")).toInt  // æ¶ˆæ¯å‘é€é—´éš”ï¼ˆæ¯«ç§’ï¼‰ï¼Œé»˜è®¤ 5 ç§’
  val heartbeatIntervalMs = sys.props.getOrElse("HEARTBEAT_INTERVAL_MS", sys.env.getOrElse("HEARTBEAT_INTERVAL_MS", "30000")).toInt  // å¿ƒè·³é—´éš”ï¼ˆæ¯«ç§’ï¼‰ï¼Œé»˜è®¤ 30 ç§’
  val enableMsgSend = sys.props.getOrElse("ENABLE_MSG_SEND", sys.env.getOrElse("ENABLE_MSG_SEND", "true")).toBoolean  // æ˜¯å¦å‘é€æ¶ˆæ¯ï¼Œé»˜è®¤å¼€å¯
  
  // è®¡ç®—é¢„æœŸ QPS
  val expectedQps = if (enableMsgSend && msgIntervalMs > 0) usersPerMachine * 1000 / msgIntervalMs else 0
  
  // Token é…ç½®
  // å‹æµ‹æ¨¡å¼ï¼šä½¿ç”¨ STRESS_TEST_BYPASS_TOKENï¼ˆéœ€è¦æœåŠ¡ç«¯å¼€å¯ im.netty.auth.stress-test-enabled=trueï¼‰
  // æ­£å¸¸æ¨¡å¼ï¼šä½¿ç”¨çœŸå® JWT Token
  val testToken = sys.props.getOrElse("TEST_TOKEN", sys.env.getOrElse("TEST_TOKEN", 
    "STRESS_TEST_BYPASS_TOKEN"))  // é»˜è®¤ä½¿ç”¨å‹æµ‹ä¸“ç”¨Token
  // ===============================================

  println(s"â•”â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•—")
  println(s"â•‘              Gatling IM å‹åŠ›æµ‹è¯•å¯åŠ¨                      â•‘")
  println(s"â• â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•£")
  println(s"â•‘  ç›®æ ‡æœåŠ¡å™¨: $targetHost:$targetPort")
  println(s"â•‘  æœºå™¨ID: $machineId (å‹ç¼©é›ªèŠ±æœºå™¨ID: $stressMachineId)")
  println(s"â• â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•£")
  println(s"â•‘  ç”¨æˆ·æ•°: $usersPerMachine")
  println(s"â•‘  å¯åŠ¨æ—¶é—´: $rampUpTime")
  println(s"â•‘  æµ‹è¯•æ—¶é•¿: $testDuration")
  println(s"â• â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•£")
  println(s"â•‘  æ¶ˆæ¯å‘é€é—´éš”: ${msgIntervalMs}ms (${msgIntervalMs/1000.0}ç§’)")
  println(s"â•‘  å¿ƒè·³é—´éš”: ${heartbeatIntervalMs}ms (${heartbeatIntervalMs/1000.0}ç§’)")
  println(s"â•‘  æ˜¯å¦å‘é€æ¶ˆæ¯: $enableMsgSend")
  println(s"â•‘  é¢„æœŸæ¶ˆæ¯QPS: $expectedQps (è¿æ¥æ•°/æ¶ˆæ¯é—´éš”)")
  println(s"â•šâ•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•")

  // HTTP åè®®é…ç½®
  val httpProtocol = http
    .baseUrl(s"http://$targetHost:$targetPort")
    .wsBaseUrl(wsUrl)
    .acceptHeader("*/*")
    .userAgentHeader("Gatling-IM-StressTest/1.0")

  /**
   * ç”Ÿæˆå‹ç¼©é›ªèŠ±ç®—æ³•ç”¨æˆ·IDï¼ˆä¸æœåŠ¡ç«¯ generateCompactUserId ä¿æŒä¸€è‡´ï¼‰
   * 
   * ç®—æ³•ï¼š[32ä½æ—¶é—´æˆ³][4ä½æœºå™¨ID][6ä½åºåˆ—å·] = 42ä½ (10-12ä½æ•°å­—)
   * 
   * @param virtualUserId è™šæ‹Ÿç”¨æˆ·ç¼–å·ï¼ˆç”¨äºç¡®ä¿å”¯ä¸€æ€§ï¼‰
   * @return å‹ç¼©æ ¼å¼çš„ç”¨æˆ·IDå­—ç¬¦ä¸²
   */
  def generateCompactUserId(virtualUserId: Long): String = {
    // å½“å‰æ—¶é—´æˆ³ï¼ˆç§’çº§ï¼‰å‡å»èµ·å§‹æ—¶é—´
    val timestamp = System.currentTimeMillis() / 1000 - USER_ID_START_TIME
    
    // ä½¿ç”¨è™šæ‹Ÿç”¨æˆ·IDä½œä¸ºåºåˆ—å·çš„ä¸€éƒ¨åˆ†ï¼Œç¡®ä¿å”¯ä¸€æ€§
    // æ¯ä¸ªè™šæ‹Ÿç”¨æˆ·æœ‰å”¯ä¸€çš„ session.userIdï¼ŒèŒƒå›´æ˜¯ 0 ~ usersPerMachine
    val sequence = (virtualUserId + userIdOffset) & MAX_USER_SEQUENCE
    
    // ç»„è£…å‹ç¼©IDï¼š[32ä½æ—¶é—´æˆ³][4ä½æœºå™¨ID][6ä½åºåˆ—å·]
    val compactId = (timestamp << USER_TIMESTAMP_SHIFT) | 
                    (stressMachineId << USER_MACHINE_SHIFT) | 
                    sequence
    
    compactId.toString
  }

  // WebSocket åœºæ™¯å®šä¹‰
  val scn = scenario(s"IM Stress Test - Machine $machineId")
    .exec { session =>
      // ä½¿ç”¨å‹ç¼©é›ªèŠ±ç®—æ³•ç”Ÿæˆç”¨æˆ·IDï¼ˆ10-12ä½æ•°å­—ï¼‰
      val userId = generateCompactUserId(session.userId)
      session.set("userId", userId)
    }
    
    // 1. å»ºç«‹ WebSocket è¿æ¥
    .exec(
      ws("Connect WebSocket")
        .connect(s"$wsUrl?userId=$${userId}")
        .header("token", testToken)
        .header("uid", "${userId}")
        .await(10.seconds)(
          ws.checkBinaryMessage("Handshake Check")
            .silent  // ä¸è®°å½•åˆ°æŠ¥å‘Šï¼Œå‡å°‘å¹²æ‰°
        )
    )
    
    // 2. ä¿æŒè¿æ¥æ´»è·ƒ - ä¿®å¤å¿ƒè·³å’Œæ¶ˆæ¯å‘é€é€»è¾‘
    // âœ… æ ¸å¿ƒæ€è·¯ï¼šä½¿ç”¨æ¶ˆæ¯é—´éš”ä½œä¸ºåŸºå‡†ï¼Œæ¯éš” N æ¡æ¶ˆæ¯å‘é€ä¸€æ¬¡å¿ƒè·³
    // ä¾‹å¦‚ï¼šæ¶ˆæ¯é—´éš” 5sï¼Œå¿ƒè·³é—´éš” 30s â†’ æ¯å‘é€ 6 æ¡æ¶ˆæ¯å‘ä¸€æ¬¡å¿ƒè·³
    .during(testDuration) {
      doIf(_ => enableMsgSend) {
        // ğŸ”¹ æ–¹æ¡ˆ Aï¼šå‘æ¶ˆæ¯ + å¿ƒè·³
        val msgsPerHeartbeat = Math.max(1, heartbeatIntervalMs / msgIntervalMs).toInt
        
        // å…ˆå‘é€å¿ƒè·³
        exec(
          ws("Send Ping Heartbeat")
            .sendBytes(Array[Byte]())
        )
        
        // ç„¶ååœ¨å¿ƒè·³é—´éš”å†…å‘é€å¤šæ¡æ¶ˆæ¯
        .repeat(msgsPerHeartbeat, "msgCycle") {
          pause(msgIntervalMs.milliseconds)
          .exec { session =>
            val fromUser = session("userId").as[String]
            val randomVirtualUserId = scala.util.Random.nextInt(usersPerMachine * 10).toLong
            val toUser = generateCompactUserId(randomVirtualUserId)
            val message = buildC2CMessage(fromUser, toUser, s"Test msg ${System.currentTimeMillis()}")
            session.set("message", message)
          }
          .exec(
            ws("Send C2C Message")
              .sendBytes("${message}")
          )
        }
      }
      
      // ğŸ”¹ æ–¹æ¡ˆ Bï¼šåªå‘å¿ƒè·³ï¼ˆä¸å‘æ¶ˆæ¯ï¼‰
      .doIf(_ => !enableMsgSend) {
        exec(
          ws("Send Ping Heartbeat")
            .sendBytes(Array[Byte]())
        )
        .pause(heartbeatIntervalMs.milliseconds)
      }
    }
    .exitHereIfFailed  // è¿æ¥å¤±è´¥ç«‹å³é€€å‡º
    
    // 3. å…³é—­è¿æ¥
    .exec(
      ws("Close WebSocket").close
    )

  // è´Ÿè½½æ¨¡å‹ï¼šé€æ­¥å¢åŠ ç”¨æˆ·
  setUp(
    scn.inject(
      rampUsers(usersPerMachine).during(rampUpTime)
    ).protocols(httpProtocol)
  ).assertions(
    global.successfulRequests.percent.gt(95),  // æˆåŠŸç‡ > 95%
    global.responseTime.max.lt(10000)          // æœ€å¤§å“åº”æ—¶é—´ < 10s
  )

  // ==================== Protobuf æ„å»ºæ–¹æ³• ====================
  
  /**
   * æ„å»ºå•èŠæ¶ˆæ¯ï¼ˆC2C_SENDï¼‰
   * 
   * æ¶ˆæ¯ç»“æ„ï¼š
   * ImProtoRequest {
   *   type = C2C_SEND
   *   payload = C2CSendReq.toByteArray()
   * }
   */
  def buildC2CMessage(from: String, to: String, content: String): Array[Byte] = {
    // ç”Ÿæˆå®¢æˆ·ç«¯æ¶ˆæ¯IDï¼ˆUUIDï¼‰
    val clientMsgId = UUID.randomUUID().toString
    val sendTime = System.currentTimeMillis()
    
    // æ„å»º C2CSendReqï¼ˆä¼˜åŒ–ç‰ˆï¼šclientMsgId=bytes, from/to=fixed64ï¼‰
    val sendReq = C2CSendReq.newBuilder()
      .setClientMsgId(ProtoConverterUtil.uuidStringToBytes(clientMsgId))  // UUID String -> bytes
      .setMsgId(0L)  // ç•™ç©ºï¼ŒæœåŠ¡ç«¯ä¼šè‡ªåŠ¨ç”Ÿæˆ
      .setFrom(ProtoConverterUtil.snowflakeStringToLong(from))  // String -> fixed64
      .setTo(ProtoConverterUtil.snowflakeStringToLong(to))  // String -> fixed64
      .setFormat(MsgFormatEnum.TEXT_MSG.getCode)  // æ–‡æœ¬æ¶ˆæ¯
      .setContent(content)
      .setTime(sendTime)  // fixed64
      .build()
    
    // åŒ…è£…ä¸º ImProtoRequest
    val protoRequest = ImProtoRequest.newBuilder()
      .setType(MsgType.C2C_SEND)
      .setPayload(ByteString.copyFrom(sendReq.toByteArray))
      .build()
    
    protoRequest.toByteArray
  }
  
  /**
   * æ„å»ºå¿ƒè·³æ¶ˆæ¯ï¼ˆå¯é€‰ï¼Œå¦‚æœéœ€è¦å‘é€ Protobuf å¿ƒè·³ï¼‰
   * 
   * æ³¨æ„ï¼šWebSocket çš„ Ping/Pong å¸§ç”± Netty è‡ªåŠ¨å¤„ç†ï¼Œ
   * é€šå¸¸ä¸éœ€è¦å‘é€ Protobuf å¿ƒè·³æ¶ˆæ¯
   */
  def buildHeartbeat(): Array[Byte] = {
    // å¦‚æœä½ çš„æœåŠ¡ç«¯éœ€è¦ç‰¹å®šçš„å¿ƒè·³æ¶ˆæ¯ï¼Œå¯ä»¥åœ¨è¿™é‡Œæ„å»º
    // ä¾‹å¦‚ï¼š
    // val heartbeat = HeartbeatReq.newBuilder().setTimestamp(System.currentTimeMillis()).build()
    // val protoRequest = ImProtoRequest.newBuilder().setType(MsgType.HEARTBEAT).setPayload(...).build()
    // protoRequest.toByteArray
    
    // é»˜è®¤è¿”å›ç©ºæ•°ç»„ï¼ˆä½¿ç”¨ WebSocket Ping å¸§ï¼‰
    Array[Byte]()
  }
}

